# haskellbook

./: .gitignore  ArbitraryTest.hs  Ch13Ex.hs  Ch14Ex.hs  FunctionWithLet.hs  Global.hs  Notes.org  Questions.org  WordNumberTest.hs  arith2.hs  arith4.hs  binarytree.hs  caseExp.hs  ch10ex.hs  ch11ex.hs  ch12ex.hs  ch3ex.hs  ch4ex.hs  ch5ex.hs  ch5ex2.hs  ch6ex.hs  ch7ex.hs  ch8ex.hs  ch9ex.hs  changemood.hs  cipher.hs  database.hs  either.hs  enumFromTo.hs  funcCompose.hs  functiontypes.hs  garden.hs  greetIFCool2.hs  greetIfCool1.hs  greetIfCool3.hs  guards.hs  learn.hs  matchingTuples1.hs  newtype.hs  nontrivial.hs  (+14 more)
ch14/: Addition.hs  addition.cabal
hangman/: hangman.cabal
hangman/src/: Main.hs
morse/: morse.cabal
morse/src/: Main.hs  Morse.hs
morse/test/: Tests.hs
