name:                morse
version:             0.1.0.0
license-file:        LICENSE
author:              Raja Naresh
maintainer:          rajanaresh89@gmail.com
category:            Text
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Morse
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , QuickCheck
  default-language:    Haskell2010

executable morse
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                     , morse
                     , containers
                     , QuickCheck
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Tests.hs
  build-depends:       base
                     , morse
                     , containers
                     , QuickCheck
  ghc-options:         -Wall -fno-warn-orphans
  default-language:    Haskell2010
